--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-    "name": "pure-graph",
+    "name": "@langgraph-js/pure-graph",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js"
+        },
+        "/hono": {
+            "import": "./dist/adapter/hono/index.js"
+        }
+    },
     "scripts": {
-        "dev": "bun run test/hono.ts"
+        "dev": "bun run test/hono.ts",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
         "@langchain/core": "^0.3.77",
