chore: 更新版本号至1.0.2，优化构建脚本，添加预发布步骤

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "@langgraph-js/pure-graph",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "",
     "main": "dist/index.js",
     "scripts": {
         "dev": "bun run test/hono.ts",
-        "build": "tsc"
+        "build": "rm -r dist && tsc",
+        "prepublish": "pnpm build"
     },
     "keywords": [],
     "author": "",
