--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -8,7 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
-        "@langgraph-js/pure-graph": "workspace:*",
+        "@langgraph-js/pure-graph": "workspace:^*",
         "next": "15.5.4",
         "react": "19.1.0",
         "react-dom": "19.1.0"
