--- a/packages/agent-graph/package.json
+++ b/packages/agent-graph/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@langchain/mcp-adapters": "^0.6.0",
-        "@langchain/openai": "^0.6.13"
+        "@langchain/openai": "^0.6.13",
+        "@langgraph-js/pure-graph": "workspace:^*"
     }
 }
