--- a/packages/agent-graph/package.json
+++ b/packages/agent-graph/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "@langchain/mcp-adapters": "^0.6.0",
-        "@langchain/openai": "^0.6.13",
+        "@langchain/openai": "^0.6.14",
+        "@langchain/tavily": "^0.1.5",
         "@langgraph-js/pure-graph": "workspace:^*"
     }
 }
