--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "@langchain/langgraph-sdk": "^0.1.7",
+        "@langchain/openai": "^0.6.14",
         "@langgraph-js/sdk": "^2.0.1",
         "@types/node": "^22.13.5",
         "typescript": "^5.9.2"
