feat: 添加 Redis 消息队列支持，优化全局管理器和流队列结构，更新相关依赖项

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "zod": "^3"
     },
     "optionalDependencies": {
+        "ioredis": "^5.8.0",
         "@hono/zod-validator": "^0.7.3",
         "hono": "^4.9.9"
     },
