--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "zod": "^3"
     },
     "optionalDependencies": {
-        "ioredis": "^5.8.0",
         "@hono/zod-validator": "^0.7.3",
+        "redis": "^5.8.3",
         "hono": "^4.9.9"
     },
     "devDependencies": {
