--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     },
     "optionalDependencies": {
         "@hono/zod-validator": "^0.7.3",
-        "redis": "^5.8.3",
-        "hono": "^4.9.9"
+        "hono": "^4.9.9",
+        "redis": "^5.8.3"
     },
     "devDependencies": {
+        "@langchain/langgraph-checkpoint-redis": "^0.0.2",
         "@langchain/langgraph-sdk": "^0.1.7",
         "@langchain/openai": "^0.6.14",
         "@langgraph-js/sdk": "^2.0.1",
