--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "zod": "^3"
     },
     "optionalDependencies": {
-        "@langchain/langgraph-checkpoint-redis": "^0.0.2",
         "@hono/zod-validator": "^0.7.3",
+        "@langchain/langgraph-checkpoint-postgres": "^0.1.2",
+        "@langchain/langgraph-checkpoint-redis": "^0.0.2",
         "hono": "^4.9.9",
+        "pg": "^8.16.3",
         "redis": "^5.8.3"
     },
     "devDependencies": {
@@ -33,6 +35,7 @@
         "@langchain/openai": "^0.6.14",
         "@langgraph-js/sdk": "^2.0.1",
         "@types/node": "^22.13.5",
+        "@types/pg": "^8.15.5",
         "typescript": "^5.9.2"
     }
 }
