--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "dev": "bun run test/hono.ts",
         "build": " vite build && tsc",
-        "build:docs": "pnpm xyd build",
+        "build:docs": "npx xyd-js build",
         "prepublish": "pnpm build"
     },
     "keywords": [
