fix: 修改命中地址的位置

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,12 +4,12 @@ publish = ".xyd/build/client"
 
 [[redirects]]
 from = "/"
-to = "/docs/index/"
+to = "/docs/getting-start"
 status = 301
 force = true
 
 [[redirects]]
 from = "/index.html"
-to = "/docs/index/"
+to = "/docs/getting-start"
 status = 301
 force = true
