--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@langgraph-js/pure-graph",
-    "version": "1.5.1",
+    "version": "1.5.2",
     "description": "A library that provides a standard LangGraph endpoint for integrating into various frameworks like Next.js and Hono.js, with support for multiple storage backends (SQLite, PostgreSQL, Redis) and message queues.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -52,6 +52,7 @@
         "@langchain/langgraph-checkpoint-sqlite": "^0.2.1",
         "@langgraph-js/pro": "^1.8.1",
         "better-sqlite3": "^12.4.1",
+        "camelcase-keys": "^10.0.0",
         "eventemitter3": "^5.0.1",
         "zod": "^3"
     },
