feat: 支持 LangGraph1.0 !

--- a/package.json
+++ b/package.json
@@ -46,28 +46,29 @@
     "license": "MIT",
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
-        "@langchain/core": "^0.3.78",
-        "@langchain/langgraph": "^0.4.9",
-        "@langchain/langgraph-checkpoint": "^0.1.1",
-        "@langchain/langgraph-checkpoint-sqlite": "^0.2.1",
+        "@langchain/core": "^1.0.1",
+        "@langchain/langgraph": "^1.0.0",
+        "@langchain/langgraph-checkpoint": "^1.0.0",
+        "@langchain/langgraph-checkpoint-sqlite": "^1.0.0",
         "@langgraph-js/pro": "^1.8.1",
         "better-sqlite3": "^12.4.1",
         "camelcase-keys": "^10.0.0",
         "eventemitter3": "^5.0.1",
+        "langchain": "^1.0.1",
         "zod": "^3"
     },
     "optionalDependencies": {
         "@hono/zod-validator": "^0.7.3",
-        "@langchain/langgraph-checkpoint-postgres": "^0.1.2",
-        "@langchain/langgraph-checkpoint-redis": "^0.0.2",
+        "@langchain/langgraph-checkpoint-postgres": "^1.0.0",
+        "@langchain/langgraph-checkpoint-redis": "^1.0.0",
         "hono": "^4.9.9",
         "pg": "^8.16.3",
         "redis": "^5.8.3"
     },
     "devDependencies": {
-        "@langchain/langgraph-sdk": "^0.1.7",
-        "@langchain/openai": "^0.6.14",
-        "@langgraph-js/sdk": "^2.0.1",
+        "@langchain/langgraph-sdk": "^1.0.0",
+        "@langchain/openai": "^1.0.0",
+        "@langgraph-js/sdk": "^3.0.1",
         "@types/node": "^22.13.5",
         "@types/pg": "^8.15.5",
         "rollup-plugin-node-externals": "^8.1.1",
