refactor: 将数据库底层改为 kysely

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@langgraph-js/pure-graph",
-    "version": "2.1.6",
+    "version": "2.2.6",
     "description": "A library that provides a standard LangGraph endpoint for integrating into various frameworks like Next.js and Hono.js, with support for multiple storage backends (SQLite, PostgreSQL, Redis) and message queues.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -51,9 +51,9 @@
         "@langchain/langgraph-checkpoint": "^1.0.0",
         "@langchain/langgraph-checkpoint-sqlite": "^1.0.0",
         "@langgraph-js/pro": "^2.0.0",
-        "better-sqlite3": "^12.4.1",
         "camelcase-keys": "^10.0.0",
         "eventemitter3": "^5.0.1",
+        "kysely": "^0.28.8",
         "langchain": "^1.0.1",
         "zod": "^3"
     },
