--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "module",
     "scripts": {
         "dev": "bun run --port 8123 test/hono.ts",
-        "dev:docs": "npx xyd-js",
+        "dev:docs": "bunx --bun xyd-js",
         "build": " vite build && tsc",
         "build:docs": "npx xyd-js build",
         "prepublish": "pnpm build"
