--- a/netlify.toml
+++ b/netlify.toml
@@ -4,12 +4,12 @@ publish = ".xyd/build/client"
 
 [[redirects]]
 from = "/"
-to = "/docs/getting-start"
+to = "/docs/getting-started"
 status = 301
 force = true
 
 [[redirects]]
 from = "/index.html"
-to = "/docs/getting-start"
+to = "/docs/getting-started"
 status = 301
 force = true
